Fixed keyboard on mobile

--- a/src/components/Keyboard/Keyboard.css
+++ b/src/components/Keyboard/Keyboard.css
@@ -16,7 +16,7 @@
   font-weight: 500;
   background-color: gray;
   color: white;
-  width: 100%;
+  width: 10%;
   max-width: 3rem;
   height: 3.5rem;
   border: none;
